# cmake-test

./: .gitignore  README.md  memo.txt
cmake-simple-test/: CMakeLists.txt  hello.cpp
cmake-test-hierarchy/: CMakeLists.txt  memo.txt
cmake-test-hierarchy/src/: CMakeLists.txt  good_morning.cpp  hello.cpp
cmake-test-hierarchy/test/: CMakeLists.txt  main.cpp
cmake-test-link-lib/: CMakeLists.txt  good_morning.cpp  main.cpp
cmake-test-static-lib/: main.cpp
debug-cmake-test/: CMakeLists.txt  main.cpp  memo.txt
options-cmake-test/: CMakeLists.txt  main.cpp
